# conversational-bridge-ai

./: README.md  index.html
backend/: README.md  pyproject.toml  requirements.txt  run.py
backend/src/agent/: bonds.csv  portfolio.py  search.py
backend/src/conversational_bridge_backend/: __init__.py  main.py
src/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx
src/lib/: api.ts  types.ts
src/pages/: Index.tsx
