[project]
name = "conversational-bridge-backend"
version = "0.1.0"
description = "Backend for Conversational Bridge AI"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversational_bridge_backend"] 